--- a/resources/views/website/home.twig
+++ b/resources/views/website/home.twig
@@ -250,6 +250,6 @@
     {% include 'partials/html_blocks/footer.twig' %}
 {% endblock %}
 
-{% block scripts %}
+{% block additional_scripts %}
     <script src="{{ base_url() }}/assets/js/website/home.js"></script>
 {% endblock %}
