--- a/resources/views/website/terms-of-service.twig
+++ b/resources/views/website/terms-of-service.twig
@@ -12,7 +12,7 @@
                 <div class="col-md-12 text-center">
                     <div class="page-title">{{ pageTitle }}</div>
                     <div id="page-icon">
-                        <div class="header-icon pricing-color1">
+                        <div class="header-icon home-services-color1">
                             <i class="htfy htfy-padlock"></i>
                         </div>
                     </div>
