--- a/resources/views/website/home.twig
+++ b/resources/views/website/home.twig
@@ -3,7 +3,6 @@
 {% include 'partials/components/preloader.twig' %}
 
     <div id="header-holder" class="homepage-header">
-        <div class="bg-animation"></div>
         {% include 'partials/html_blocks/navbar.twig' %}
         <div id="page-head" class="container inner-page">
             <div class="container">
@@ -15,7 +14,7 @@
                     </div>
                     <div class="col-lg-7 col-lg-offset-1 col-md-7 col-md-offset-1 pl-0 pr-0">
                         <div class="head-content">
-                            <p><span>Swap</span> is a peer-to-peer exchange for crypto currencies.</p>
+                            <p><strong>Swap</strong> is a peer-to-peer exchange for crypto currencies.</p>
                             <p class="fs-15">
                                 Trade <strong>Bitcoin</strong>, <strong>Ethereum</strong> and <strong>Litecoin</strong> 
                                 for fiat currency on an easy, secure and fast platform. We place the trading power in your hands and keep up the trust.
