--- a/resources/views/website/home.twig
+++ b/resources/views/website/home.twig
@@ -72,7 +72,7 @@
         </div>
     </div>
 
-    <div id="services" class="container-fluid">
+    <div id="services" class="container-fluid hidden">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-6">
